--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -569,11 +569,9 @@
 
                             </div>
                                  <hr>
+                                <div class="actions" style="text-align: right">
 
-                            <div class="form-group">
-                                <div class="col-md-6"></div>
 
-                                <div class="col-md-3 col-md-offset-3 " style="padding-left:5.2%">
                                     <!--<button type="button" class=" btn btn-default input-rounded " ng-click="">-->
                                         <!--Cancel-->
                                     <!--</button>-->
@@ -589,7 +587,6 @@
                                         Cancel
                                     </button>
 
-                                </div>
                             </div>
                                 </span>
                             <span ng-show="location">
@@ -772,7 +769,7 @@
                                 </div>
 
                                                                                         <div class="col-md-4">
-                                    <label class=" font-weight-head  "> Chevvai Dosham / Rassi</label>
+                                    <label class=" font-weight-head  "> Chevvai Dosham</label>
 
                                     <p ng-if="profile.login_user.dosham != null" class="details ">
                                         {{profile.login_user.dosham}}</p>
@@ -1953,7 +1950,7 @@
 
                                 </div>
                                 <div class="col-md-4">
-                                    <label class=" font-weight-head  "> Chevvai Dosham / Rassi</label>
+                                    <label class=" font-weight-head  "> Chevvai Dosham</label>
 
                                     <p class="details ">{{profile.login_user.preferences.dosham}}</p>
 
