--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-    <div class="portlet light form-fit bordered col-md-offset-6 col-md-5 margin-top-15 reg-pannel">
+    <div class="portlet light form-fit bordered col-md-offset-7 col-md-4 margin-top-10 reg-pannel">
         <div class="portlet-title reg-pannel-title" style="height: 78px">
             <div class="caption">
                 <span class=" reg-header uppercase">Registration</span>
@@ -9,7 +9,7 @@
             </div>
 
         </div>
-        <div class="portlet-body form" style="margin-left:20px;margin-right:20px">
+        <div class="portlet-body form" style="margin-left:10px;margin-right:10px">
             <!-- BEGIN FORM-->
             <form name="regForm" class=" form-horizontal  ">
                 <br>
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="form-group text-dis" >
-                    <label class="col-md-3 control-label  reg-label">PROFILE FOR<span style="color: red">*</span></label>
+                    <label class="col-md-3 control-label  reg-label">Profile for <span style="color: red">*</span></label>
 
                     <div class="col-md-8">
                         <select class="form-control input-rounded" ng-model="reg.profile_for" ng-change="selectProfileFor()">
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label ">NAME <span style="color: red">*</span></label>
+                    <label class="col-md-3 control-label reg-label ">Name <span style="color: red">*</span></label>
 
                     <div class="col-md-8">
                         <input type="text" required class="form-control  input-rounded" placeholder="Name" ng-model="reg.name">
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label">GENDER<span style="color: red">*</span></label>
+                    <label class="col-md-3 control-label reg-label">Gender <span style="color: red">*</span></label>
 
                     <div class="col-md-8 margin-right-30">
                             <div class="col-md-4">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label">DATE OF BIRTH<span style="color: red">*</span></label>
+                    <label class="col-md-3 control-label reg-label">Date of Birth <span style="color: red">*</span></label>
 
                    <!-- <div class="col-md-8">
                         <input type="date" required class="form-control input-rounded" ng-model="reg.dob" placeholder="Date of Birth">
@@ -107,7 +107,7 @@
 
                 </div>
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label ">MOTHER TONGUE<span style="color: red">*</span></label>
+                    <label class="col-md-3 control-label reg-label ">Mother Tongue <span style="color: red">*</span></label>
 
 
                     <div class="col-md-8">
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label">RELIGION<span style="color: red">*</span></label>
+                    <label class="col-md-3 control-label reg-label">Religion <span style="color: red">*</span></label>
 
 
                     <div class="col-md-8">
@@ -138,7 +138,7 @@
                 </div>
 
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label">EMAIL<span style="color: red">*</span></label>
+                    <label class="col-md-3 control-label reg-label">E-mail <span style="color: red">*</span></label>
 
                     <div class="col-md-8">
                         <input type="email" ng-model="reg.email" required class="form-control reg-box input-rounded" placeholder="Email Address">
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label">MOBILE NUMBER<span style="color: red">*</span></label>
+                    <label class="col-md-3 control-label reg-label">Mobile Number <span style="color: red">*</span></label>
 
                     <div class="col-md-3">
                         <select class="form-control " required ng-model="reg.code">
@@ -171,7 +171,7 @@
                 </div>
 
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label">PASSWORD<span style="color: red">*</span></label>
+                    <label class="col-md-3 control-label reg-label">Password <span style="color: red">*</span></label>
 
                     <div class="col-md-8">
                         <input required type="password" class="form-control input-rounded" ng-model="reg.password" placeholder="Password"
