--- a/src/app/main/registration2/registrationStep2.html
+++ b/src/app/main/registration2/registrationStep2.html
@@ -37,7 +37,9 @@
                     </form>
 </div>
                     <div class="col-md-12">
-                        <h5>Didn't received the PIN yet? <a class="btn btn-link" ng-click="resend();">Resend PIN</a><a ui-sref="login" class="btn btn-link fright red-font">Skip & Continue</a></h5>
+                        <h5>Didn't received the PIN yet? <a class="btn btn-link" ng-click="resend();">Resend PIN</a>
+                            <!--<a ui-sref="login" class="btn btn-link fright red-font">Skip & Continue</a>-->
+                        </h5>
                         <h6>Thank you for registering your profile on PeopleMatrimony. To validate your Profile call +91-00-00000000 (Indian long distance call) or write to us at support@peoplematrimony.com</h6>
                     </div>
                                     </div>
