--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -1,5 +1,5 @@
 <div class="page-sidebar-wrapper">
-    <div class="page-sidebar navbar-collapse collapse" style="background-color: #e4e8eb!important;">
+    <div class="page-sidebar navbar-collapse collapse" style="width:255px;background-color: #e4e8eb!important;">
         <div class="row">
             <div class="col-md-12">
                 <ul class="page-sidebar-menu menu-panel  "  data-keep-expanded="false"
@@ -23,14 +23,14 @@
                                                 </div>
                                                 <div class="row ">
                                                     <div class="col-md-12">
-                                                        <span class="menu-option"><a style="color: red" ui-sref="managephoto">Add more Photo</a></span>
+                                                        <span class="menu-option"><a style="color: red" ui-sref="managephoto">Add More Photo</a></span>
                                                     </div>
                                                     <div class="col-md-12">
                                                         <span class="menu-option"><a style="color: red" ui-sref="profile">Edit Profile</a></span>
                                                     </div>
                                                     <div class="col-md-12">
                                                         <span class="menu-option"><a style="color: red" ui-sref="profile">
-                                                            Edit partner preference</a>
+                                                            Edit Partner Preferences</a>
                                                         </span>
                                                     </div>
                                                 </div>
