--- a/src/app/toolbar/profile/profileToolbar.html
+++ b/src/app/toolbar/profile/profileToolbar.html
@@ -75,9 +75,9 @@
 		<div class="row" style="background-color: #00c29e">
 			<div class="col-md-1"></div>
 			<div class="col-md-10">
-				<div class="main-heading">
-					Settings
-				</div>
+				<!--<div class="main-heading">-->
+					<!--Settings-->
+				<!--</div>-->
 				<!-- END LOGO -->
 				<!-- DOC: Remove "hide" class to enable the page header actions -->
 				<div class="main-heading-actions">
