--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -468,13 +468,12 @@
                             </div>
                             <hr>
                             <div class="form-group">
-                                <div class="col-md-offset-8">
-                                    <button type="button" class=" btn red input-rounded " ng-click="search()">
-                                        Save & Search
-                                    </button>
-
+                                <div class="pull-right">
                                     <button type="button" class=" btn red input-rounded " ng-click="search()">
                                         Search
+                                    </button>
+                                    <button type="button" class=" btn red input-rounded " ng-click="search()">
+                                        Save & Search
                                     </button>
                                 </div>
                             </div>
