--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -17,11 +17,12 @@
                 <div class="col-md-12 ">
                     <div class="portlet light bordered">
                         <div class="portlet-title" style="border-bottom: 0px">
-                            <div class="caption green" style="font-size: 12px">
-                                <span class="caption-subject  bold "> Profile shorts :</span>
-                                <span> <input type="checkbox"/>Photo Available</span>
-                                <span> <input type="checkbox"/>Horoscope Available</span>
-                                <span> <input type="checkbox"/>Online Now</span>
+                            <div class="caption green" style="font-size: 13px">
+                                <span class="caption-subject profile-sort   "> Profile shorts :</span>
+                                <span> <input class="filter-check-box" type="checkbox"/> Photo Available</span>
+                                <span> <input class="filter-check-box" type="checkbox"/> Horoscope Available</span>
+                                <span> <input class="filter-check-box" type="checkbox"/> Online Now</span>
+                                <!--<span style="margin-left:20px"> More</span>-->
                             </div>
                             <!--<div class="actions">-->
                                 <!--<div class="btn-group">-->
@@ -73,7 +74,7 @@
                             <div class="caption ">
                                 <a ng-click="viewProfile(item.id_people)"><span class="caption-subject font-red-sunglo bold"> {{item.name}}</span> <span>({{item.id_people}})</span></a>
                                 <br/>
-                                <span ng-if="item.profile_for != null && item.profile_for != ''" style="font-size: 9px"> Profile created by {{item.profile_for}}</span>
+                                <span ng-if="item.profile_for != null && item.profile_for != ''" style="font-size: 11px"> Profile created by {{item.profile_for}}</span>
                             </div>
                             <div class="actions">
                                 <div class="btn-group">
@@ -171,8 +172,8 @@
                                             class="fa fa-commenting-o"></i> <span class="hidden-sm hidden-xs">  Chat now</span>
                                     </div>
                                     <div class="col-md-3 col-sm-3 col-xs-3" ng-click="sendInterest(item.id_people)"
-                                         style="height:60px;font-size:14px;padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a;cursor: pointer"><i
-                                            class="fa fa-heart" style="color: white!important;font-size: 18px"></i><span class="hidden-sm hidden-xs"> Send Interest</span>
+                                         style="height:60px;font-size:14px;padding: 20px;border: 1px solid #eef1f5;background-color:white;cursor: pointer"><i
+                                            class="fa fa-heart" style="color: black!important;font-size: 18px"></i><span class="hidden-sm hidden-xs"> Send Interest</span>
                                     </div>
 
                                 </div>
