--- a/src/app/toolbar/profile/profileToolbar.html
+++ b/src/app/toolbar/profile/profileToolbar.html
@@ -57,7 +57,7 @@
 									<li class="divider"></li>
 
 									<li>
-										<a ui-sref="login">
+										<a ng-click="logout()">
 											<i class="icon-key"></i> Log Out </a>
 									</li>
 								</ul>
