--- a/src/app/toolbar/settings/settingsToolbar.html
+++ b/src/app/toolbar/settings/settingsToolbar.html
@@ -140,7 +140,7 @@
 							</li>
 							<!-- END NOTIFICATION DROPDOWN -->
 							<!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
-							<li class="dropdown dropdown-user dropdown-dark">
+							<li class="dropdown dropdown-user ">
 								<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
 									<!--<span class="username username-hide-on-mobile"> Doe </span>-->
 									<!-- DOC: Do not remove below empty space(&nbsp;) as its purposely used -->
@@ -158,7 +158,7 @@
 									<li class="divider"></li>
 
 									<li>
-										<a ui-sref="login">
+										<a ng-click="logout()">
 											<i class="icon-key"></i> Log Out </a>
 									</li>
 								</ul>
