--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -821,10 +821,26 @@
                             <div class="form-group">
 
                                 <div class="col-md-6">
-                                    <label class="uppercase font-weight "> Annaul Income</label>
+                                    <label class="uppercase font-weight "> Annual Income</label>
+                                    <select class="form-control input-rounded "
+                                            ng-model="profile.login_user.income">
+                                        <option value="any">any</option>
+                                        <option value="Rs 8 Lakhs">Rs 8 Lakhs</option>
+                                        <option value="Rs 9 Lakhs">Rs 9 Lakhs</option>
+                                        <option value="Rs 10 Lakhs">Rs 10 Lakhs</option>
+                                        <option value="Rs 11 Lakhs">Rs 11 Lakhs</option>
+                                        <option value="Rs 12 Lakhs">Rs 12 Lakhs</option>
+                                        <option value="Rs 13 Lakhs">Rs 13 Lakhs</option>
+                                        <option value="Rs 15 Lakhs">Rs 15 Lakhs</option>
+                                        <option value="Rs 17 Lakhs">Rs 17 Lakhs</option>
+                                        <option value="Rs 20 Lakhs">Rs 20 Lakhs</option>
+                                        <option value="Rs 25 Lakhs">Rs 25 Lakhs</option>
+                                        <option value="Rs 30 Lakhs">Rs 30 Lakhs</option>
+                                        <option value="Rs 50 Lakhs">Rs 50 Lakhs</option>
+                                        <option value="1 Crore">1 Crore</option>
 
-                                    <input type="text" class="form-control  input-rounded"
-                                           ng-model="profile.login_user.income">
+                                    </select>
+
 
                                 </div>
 
@@ -2061,8 +2077,26 @@
                                     <label class="font-weight "> Annual Income</label>
 
 
-<input type="text" class="form-control  input-rounded"
-                                           ng-model="profile.login_user.preferences.income">
+<!--<input type="text" class="form-control  input-rounded"-->
+                                           <!--ng-model="profile.login_user.preferences.income">-->
+                                    <select class="form-control input-rounded "
+                                            ng-model="profile.login_user.preferences.income">
+                                        <option value="any">any</option>
+                                        <option value="Rs 8 Lakhs">Rs 8 Lakhs</option>
+                                        <option value="Rs 9 Lakhs">Rs 9 Lakhs</option>
+                                        <option value="Rs 10 Lakhs">Rs 10 Lakhs</option>
+                                        <option value="Rs 11 Lakhs">Rs 11 Lakhs</option>
+                                        <option value="Rs 12 Lakhs">Rs 12 Lakhs</option>
+                                        <option value="Rs 13 Lakhs">Rs 13 Lakhs</option>
+                                        <option value="Rs 15 Lakhs">Rs 15 Lakhs</option>
+                                        <option value="Rs 17 Lakhs">Rs 17 Lakhs</option>
+                                        <option value="Rs 20 Lakhs">Rs 20 Lakhs</option>
+                                        <option value="Rs 25 Lakhs">Rs 25 Lakhs</option>
+                                        <option value="Rs 30 Lakhs">Rs 30 Lakhs</option>
+                                        <option value="Rs 50 Lakhs">Rs 50 Lakhs</option>
+                                        <option value="1 Crore">1 Crore</option>
+
+                                    </select>
 
                                 </div>
 
