--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -186,21 +186,7 @@
                                 <div class="col-md-6">
                                     <label class="font-weight  "> Age </label>
 
-                                    <select class="form-control input-rounded " ng-model="profile.login_user.age">
-                                        <option>Select</option>
-                                        <option value="18">18</option>
-                                        <option value="19">19</option>
-                                        <option value="20">20</option>
-                                        <option value="21">21</option>
-                                        <option value="22">22</option>
-                                        <option value="23">23</option>
-                                        <option value="24">24</option>
-                                        <option value="25">25</option>
-                                        <option value="26">26</option>
-                                        <option value="27">27</option>
-                                        <option value="28">28</option>
-                                        <option value="29">29</option>
-                                    </select>
+                                <p class="details">{{profile.login_user.age}}</p>
                                 </div>
 
                             </div>
